# learn_analytics

./: .1.config  .env  .envrc  .gitignore  Cargo.toml  Config.1.toml  Config.toml  README.md  config.toml  flake.nix  init.sh  logfile  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
archive/: flake.nix
datas/: postgresql.conf  postmaster.opts
datas/base/1/: 1259  13398  2579  2619  2619_vm  2659  2663  2666  2667  2673  2690  2696  2703  2704  2839  2840  2841
datas/base/4/: 1259  2658  2693  3085  3164  3455
datas/base/5/: 1259  2619  2664  2665  2674  2675  2678  2679  2691  2692  2837  3456
datas/global/: 1260  1262  2676  pg_control
datas/pg_stat/: pgstat.stat
migrations/: 0001_books_table.sql  20230517032540_player_stats.sql
nba/: test
nba/Database/export/: Advanced.csv
nba/Database/import/: player_impact.pgsql  player_stats_advanced.pgsql
nba/Views/Tableau/: nba.twb
src/: load_env_vars.rs  main.rs
src/archive/: db.rs  main.1.rs  mod.rs  reset.rs  start.rs  stop.rs
src/config/: mod.rs
src/nba/: .config  .env
src/nba/Database/: init.sql
src/nba/Database/context/: Advanced.pgsql
src/server/: check.rs  mod.rs  output.rs  reset.rs  start.rs
src/tools/: get.rs  mod.rs
temp/: 1-iris-data-analysis-rust.ipynb  4-polars-tutorial-part-2.ipynb
temp/.ipynb_checkpoints/: 1-iris-data-analysis-rust-checkpoint.ipynb
temp/context/: Advanced.1.pgsql  test.pgsql
temp/export/: Advanced.pgsql
temp/tables/: player_stats.pgsql  player_stats_DDL.pgsql  player_stats_DML.1.pgsql
temp/tests/: cli.rs
tests/: cli.rs  load_env_vars.rs
(+7 files in other folders)
